Fix empty arrays in QML 1

Commit bb0239e added a regression, where empty arrays would produce errors
in QML 1.

Task-number: QTBUG-43656
Change-Id: I6d416b2387a1dfd3588c000368fc1223d08399bd
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>